chore: UI theme upgrade for explore page, fix: alignment of post section in explore page and new look for search bar

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -145,13 +145,15 @@ input:focus {
 
 .post-container {
     margin-top: 2rem;
-    background-color: #111111;
+    background-color: transparent;
+    background-color: rgb(11, 9, 26);
     padding: 0px 15px 15px 15px;
     width: 600px;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
     border-radius: 6px;
+    border: 1px solid rgb(32, 25, 92)
 }
 
 .post-header-left {
@@ -297,24 +299,24 @@ input:focus {
 .message-write {
     margin-top: 10px;
     width: 96%;
-    background-color: #1A1D1E;
     padding: 10px;
     border-radius: 15px;
     display: flex;
     flex-direction: row;
     gap: 0.7rem;
+    align-items: center;
 }
 
 .message {
     margin-top: 2rem;
     background-color: #AEC0F5;
     color: black;
-    padding: 10px 15px 0px 15px;
-    /* border-radius: 15px; */
+    padding: 10px 15px 10px 15px;
     border-radius: 0px 10px 10px 10px;
     float: left;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .msg-pfp {
@@ -322,20 +324,14 @@ input:focus {
     border-radius: 50%;
 }
 
-.msg-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-}
+
 
 .post-bottom-line {
-    border: 1px solid rgb(45, 45, 45);
+    border: 1px solid rgb(39, 32, 97);
     border-radius: 4px;
     width: 575px;
     font-size: 12px;
-    background-color: rgb(23, 22, 23);
+    background-color: transparent;
     padding: 6px 12px 6px 10px;
     display: flex;
     flex-direction: row;
@@ -344,9 +340,6 @@ input:focus {
     transition: 0.3s;
 }
 
-.post-bottom-line:hover{
-    background-color: #1b1a1c;
-}
 
 .post-header-subtle {
     color: gray;
